--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,52 @@
-#*
-*$
-*.BAK
-*.Z
-*.bak
-*.class
-*.elc
-*.ln
+# Created by .ignore support plugin (hsz.mobi)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+*.manifest
+*.spec
+pip-log.txt
+pip-delete-this-directory.txt
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
+.hypothesis/
+*.mo
+*.pot
 *.log
-*.o
-*.obj
-*.olb
-*.old
-*.orig
-*.pyc
-*.pyo
-*.rej
-*~
-,*
-.#*
-.DS_Store
-.del-*
-.make.state
-.nse_depinfo
-CVS.adm
-RCS
-RCSLOG
-SCCS
-_$*
-.project
-.pydevproject
-__pycache__
+local_settings.py
+instance/
+.webassets-cache
+.scrapy
+docs/_build/
+target/
+.ipynb_checkpoints
+.python-version
+celerybeat-schedule
+.env
+.venv/
+venv/
+ENV/
+.spyderproject
+.ropeproject
